@@ -1,0 +1,1 @@
+Rewrite the Calltips doc section.
