@@ -3,6 +3,8 @@ Released on 2020-09-14?
 ======================================
 
 
+bpo-35764: Rewrite the Calltips doc section.
+
 bpo-40181: In calltips, stop reminding that '/' marks the end of
 positional-only arguments.
 
